--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <div class="layer">
               <h3>Personal Portfolio</h3>
               <p>It's a personal site that to show my works and Achivements.</p>
-              <a href=""><i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></a>
+              <a href="https://nibinh.github.io/nibinportfolio/"><i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></a>
             </div>
           </div >
 
@@ -175,6 +175,8 @@
       </div>
     </div>
 
+
+    <!-- ------------------------See more option----------------------- -->
     <script>
       let seemorebtn=document.querySelector("#seemore");
       let currentitem=3;
@@ -188,6 +190,7 @@
       }
     </script>
     
+    <!-- ---------------------------About Section----------------------- -->
     <script>
       var tablinks=document.getElementsByClassName("tab-links")
       var tabcontents=document.getElementsByClassName("tab-contents")
@@ -204,6 +207,7 @@
       }
     </script>
 
+<!-- -------------------------Side menu bar--------------------------- -->
     <script>
       var sidemenu=document.getElementById("sidemenu")
 
@@ -215,7 +219,7 @@
         sidemenu.style.right="-200px"
       }
     </script>
-
+<!-- ---------------------------Message senting---------------------------- -->
 <script>
   const scriptURL = 'https://script.google.com/macros/s/AKfycbz3GoCm5aaHAik861M43uFrBvzPjnCrTiKhb__TMQUqZZ_h1FCg8P0kl2eX_ULK7UeP/exec'
   const form = document.forms['submit-to-google-sheet']
