--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               <i class="fas fa-solid fa-bars" onclick="openmenu()"></i>
             </nav>
             <div class="header-text">
-              <p>Software Developer</p>
+              <p >Software Developer</p>
               <h1 class="hdngfont">Hi, i'm <span>Nibin</span><br> Haridas from India</h1>
             </div>
         </div>
@@ -176,7 +176,7 @@
               <a href="https://instagram.com/nibin_haridas?igshid=ZDdkNTZiNTM="><i class="fa-brands fa-instagram"></i></a>
               <a href="https://www.linkedin.com/in/nibin-haridas"><i class="fa-brands fa-linkedin"></i></a>
             </div>
-            <a href="images/Nibin Haridas.pdf" download class="btn btn2">Download Cv</a>
+            <a href="images\Nibin-Haridas-Resume.pdf"  download class="btn btn2">Download Cv</a>
           </div>
           <div class="contact-right">
             <form name="submit-to-google-sheet">
