--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
             <div class="social-icons">
               <a href="https://instagram.com/nibin_haridas?igshid=ZDdkNTZiNTM="><i class="fa-brands fa-instagram"></i></a>
               <a href="https://www.linkedin.com/in/nibin-haridas"><i class="fa-brands fa-linkedin"></i></a>
+              <a href="https://github.com/Nibinh"><i class="fa-brands fa-github"></i></a>
             </div>
             <a href="images\Nibin-Haridas-Resume.pdf"  download class="btn btn2">Download Cv</a>
           </div>
