--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
 
             <div class="tab-contents " id="experience">
               <ul>
+                <li><span>Pinetech ITS</span><br>Junior Nodejs Developer </li>
+                <li style="font-size: 12px">March 2024 - Present</li>
+              </ul>
+              <ul>
                 <li><span>B-JeLT Technologies Pvt Ltd</span><br>MERN Stack Intern </li>
                 <li style="font-size: 12px">May 2023 - August 2023</li>
               </ul>
