my photo chnaged

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="container">
         <div class="row">
           <div class="about-col-1">
-            <img src="images/nibin2.jpeg.jpg" alt="">
+            <img src="images/WhatsApp Image 2025-05-20 at 17.14.29_9b3b4b37.jpg" alt="">
           </div>
           <div class="about-col-2">
             <h1 class="sub-title">About Me</h1>
