--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="tab-contents " id="experience">
               <ul>
                 <li><span>Pinetech ITS</span><br>Junior Nodejs Developer </li>
-                <li style="font-size: 12px">March 2024 - Present</li>
+                <li style="font-size: 12px">March 2024 - May 2025</li>
               </ul>
               <ul>
                 <li><span>B-JeLT Technologies Pvt Ltd</span><br>MERN Stack Intern </li>
